# qsi_subspace_ED

./: .gitignore  .ignore  .lldbinit  CMakeLists.txt  INDEXING.md  Manifest.toml  Project.toml  README.md  TODO.md  benchmark_uints  meson.build  meson.options  push_figs.sh  sweep.txt  test.mpack
bench/: .meson.build.swp  bench_apply.cpp  bench_apply_mpi.cpp  bench_apply_mpi_omp.cpp  bench_lanczos.cpp  bench_lanczos_mpi.cpp  bench_permutations.cpp  benchmark_uint128.cpp  benchme.sh  benchy1.sh  call_stack_timing.sh  mem_bench.sh  meson.build  pyro_1,0,0_0,2,0_0,0,1.0.basis.h5  pyro_1,0,0_0,2,0_0,0,2.0.basis.h5  pyro_1,0,0_0,2,0_0,0,3.0.basis.h5  pyro_1,0,0_0,2,0_0,0,4.0.basis.h5  pyro_1,0,0_0,2,0_0,0,5.0.basis.h5  pyro_1,0,0_0,2,0_0,0,5.json  pyro_1,0,0_0,2,0_0,0,6.json  pyro_2_2_4x0,4,-4b0,4,4b4,4,0b1.json
bench/src/: .ankerl_memtest.cpp.swp  ankerl_memtest.cpp  cust_memtest.cpp  map_choice.cpp  map_memtest.cpp  umap_memtest.cpp  vector_memtest.cpp
bench/test_data/: pyro_1,0,0_0,1,0_0,0,10.json  pyro_1,0,0_0,1,0_0,0,11.json  pyro_1,0,0_0,1,0_0,0,12.json  pyro_1,0,0_0,1,0_0,0,13.json  pyro_1,0,0_0,1,0_0,0,14.json  pyro_1,0,0_0,1,0_0,0,15.json  pyro_1,0,0_0,1,0_0,0,16.json  pyro_1,0,0_0,1,0_0,0,17.json  pyro_1,0,0_0,1,0_0,0,18.json  pyro_1,0,0_0,1,0_0,0,19.json  pyro_1,0,0_0,1,0_0,0,2.json  pyro_1,0,0_0,1,0_0,0,20.json  pyro_1,0,0_0,1,0_0,0,21.json  pyro_1,0,0_0,1,0_0,0,22.json  pyro_1,0,0_0,1,0_0,0,23.json  pyro_1,0,0_0,1,0_0,0,3.json  pyro_1,0,0_0,1,0_0,0,4.json  pyro_1,0,0_0,1,0_0,0,5.json  pyro_1,0,0_0,1,0_0,0,6.json  pyro_1,0,0_0,1,0_0,0,7.json  pyro_1,0,0_0,1,0_0,0,8.json  pyro_1,0,0_0,1,0_0,0,9.json  pyro_1,0,0_0,2,0_0,0,1.0.basis.csv  pyro_1,0,0_0,2,0_0,0,1.0.basis.h5  pyro_1,0,0_0,2,0_0,0,1.json  pyro_1,0,0_0,2,0_0,0,10.json  pyro_1,0,0_0,2,0_0,0,2.0.basis.csv  pyro_1,0,0_0,2,0_0,0,2.0.basis.h5  pyro_1,0,0_0,2,0_0,0,2.json  pyro_1,0,0_0,2,0_0,0,3.0.basis.csv  pyro_1,0,0_0,2,0_0,0,3.0.basis.h5  pyro_1,0,0_0,2,0_0,0,3.json  pyro_1,0,0_0,2,0_0,0,4.0.basis.csv  pyro_1,0,0_0,2,0_0,0,4.0.basis.h5  pyro_1,0,0_0,2,0_0,0,4.json  pyro_1,0,0_0,2,0_0,0,5.0.basis.csv  pyro_1,0,0_0,2,0_0,0,5.0.basis.h5  pyro_1,0,0_0,2,0_0,0,7.json  pyro_1,0,0_0,2,0_0,0,8.json  pyro_1,0,0_0,2,0_0,0,9.json  (+9 more)
components/: meson.build
components/build_basis/: gen_spinon_basis.cpp  merge_shards.cpp  merge_sorted_shards.cpp  meson.build  partition_shard.cpp  sbsearch.cpp  sbsearch_mpi.cpp  sort_shard.cpp
components/build_basis/include/: admin.hpp  barrier_shim.hpp  pyro_tree.hpp  pyro_tree_mpi.hpp  shard.hpp  sort.hpp
components/build_basis/src/: gen_spinon_basis.cpp  partition_basis.cpp  polyring_basis.cpp  pyro_tree.cpp  pyro_tree_mpi.cpp  sbsearch.cpp
components/common/: meson.build
components/common/include/: basis_io.hpp  basis_io_h5.hpp  benes_network.hpp  bits.hpp  bittools.hpp  mpi_context.hpp  old_gcc_shims.hpp  permute.hpp  tetra_graph_io.hpp  timeit.hpp
components/common/src/: tetra_graph_io.cpp
components/linalg_routines/: meson.build
components/linalg_routines/include/: blas_adapter.hpp  common_bits.hpp  common_bits_mpi.hpp  lanczos.hpp  lanczos_mpi.hpp  lapack_adapter.hpp  vector_math.hpp
components/linalg_routines/src/: lanczos.cpp  lanczos_mpi.cpp
components/operator/: meson.build
components/operator/include/: basis_format_bits.hpp  checkpoint_utils.hpp  group_theory.hpp  operator.hpp  operator_matrix.hpp  operator_mpi.hpp
components/operator/src/: group_theory.cpp  operator.cpp  operator_matrix.cpp  operator_mpi.cpp
driver/: basis.plan  basis.plan.track  benchy.sh  diag_eval_all.sh  ed_phasedia_plan.sh  execute_asynchronous.sh  write_phasedia_plan.sh
hpc_driver/: bampi_1.slurm  bampi_108.slurm  bampi_128.slurm  bampi_2.slurm  bampi_3.slurm  bampi_4.slurm  basis_manifest.txt  bench_apply_mpi.slurm  bench_apply_mpi_test.slurm  bench_huge.slurm  cppjob_template.slurm  diag_DOQSI_huge.slurm  fix_runs.sh  gen_basis_icelake.slurm  icelake_gcc_modules.txt  icelake_modules_needed.txt  phase_dia.plan  plan_phasedia.sh  plan_phasedia_fast.sh  pyjob_template.slurm  submit_array.sh
include/: admin.hpp  basis_format_bits.hpp  basis_io.hpp  basis_io_h5.hpp  ftlm.hpp  (+14 more)
python_uint128/: CMakeLists.txt  uint128.cpp
python_uint128/tests/: basic_ops.py
src/: bittools.hpp  build_hamiltonian.cpp  csv_to_h5.cpp  decompose_sectors.cpp  diag_DOQSI_ham.cpp  diag_DOQSI_ham_mpi.cpp  eval_dsf.cpp  eval_observables.cpp  eval_observables_mpi.cpp  expectation_eval.cpp  ftlm.cpp  ftlm_DOQSI_ham.cpp  gen_0spinon_basis.cpp  gen_projected_basis.cpp  gen_spinon_basis.cpp  gen_spinon_basis_2.cpp  gen_spinon_basis_parallel.cpp  gs_DOQSI_ham.cpp  meson.build  operator.cpp  operator_matrix.cpp  partition_basis.cpp  polyring_basis.cpp  polyring_basis_mpi.cpp  pyro_nontree.cpp  pyro_tree.cpp  ring_normed.cpp  sbsearch.cpp  tetra_graph_io.cpp  tetra_graph_io.hpp
subprojects/packagefiles/spectra/: meson.build
test/: CMakeLists.txt  benchmark_uints.cpp  check_polyring.sh  check_sbsearch_against_known.sh  data.h5  meson.build  sbsearch_self_consistent.sh  test_PMR_construct.cpp  test_apply.cpp  test_apply_mpi.cpp  test_arpack.cpp  test_arpack_SLU.cpp  test_basis_io.cpp  test_build_lat.py  test_build_unit_cell.py  test_correct.sh  test_feast.cpp  test_ftlm_ops.cpp  test_lanczos.cpp  test_lanczos_mpi.cpp  test_mpi_alignment.cpp  test_orbit.cpp  test_permutations.cpp  test_q_basis.cpp  test_rank_of_state.cpp  test_spinonfree_222.sh  test_tree.sh  test_trie_lookup.cpp  test_uint128.cpp
test/data/: REFERENCE_Jpm=0.0200%Bx=0.1000%By=0.1000%Bz=0.1000%.eigs.h5  REFERENCE_Jpm=0.0200%Bx=0.1000%By=0.1000%Bz=0.1000%.eigs.out.h5  pyro_1,0,0_0,1,0_0,0,2.reference.basis.h5  pyro_2_2_2x0,4,4b4,0,4b4,4,0b1.json  pyro_2_2_2x0,4,4b4,0,4b4,4,0b1.reference.basis.csv  pyro_2_2_2x0,4,4b4,0,4b4,4,0b1.reference.basis.h5  pyro_2_2_2x0,4,4b4,0,4b4,4,0b1test_basis.csv
test/lattice_files/: pyro_1,0,0_0,1,0_0,0,2.json  pyro_2,0,0_0,2,0_0,0,2.json  pyro_2,0,0_0,2,0_0,0,3.json  pyro_2_2_2x0,4,4b4,0,4b4,4,0b1.json  pyro_2_2_3x0,4,4b4,0,4b4,4,0b1.0test.h5  pyro_2_2_3x0,4,4b4,0,4b4,4,0b1.json  pyro_2_3_3x0,4,4b4,0,4b4,4,0b1.json
(+117 files in other folders)
